[build-system]
requires = ["setuptools<65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cybrex"
version = "1.8.2"
authors = [{ name = "Interdimensional Walker" }]
description = "Researching AI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
]
dynamic = ["dependencies"]

[project.scripts]
cybrex = "cybrex.cli:main"

[project.urls]
"Homepage" = "https://github.com/nexus-stc/stc"

[project.optional-dependencies]
petals = ["petals>=2.0.0"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

