[build-system]
requires = ["setuptools<65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stc-geck"
version = "1.8.14"
authors = [{ name = "Interdimensional Walker" }]
description = "GECK (Garden Of Eden Creation Kit) is a toolkit for setting up and maintaning STC"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
]
dynamic = ["dependencies"]

[project.scripts]
geck = "stc_geck.cli:main"

[project.urls]
"Homepage" = "https://github.com/nexus-stc/stc"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

