[build-system]
requires = ["setuptools<65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stc-tools"
version = "1.0.14"
authors = [{ name = "Interdimensional Walker" }]
description = "Standard Template Construct Client"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
]
dynamic = ["dependencies"]

[project.scripts]
stc-tools = "stc_tools.cli:main"

[project.urls]
"Homepage" = "https://github.com/nexus-stc/stc"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

